# paracore-agent

./: .gitignore  EXTENSION_METHODS.md  README.md  REPL_GUIDE.md  build-mcp.ps1  corescript_pb2.py  corescript_pb2.pyi  corescript_pb2_grpc.py  grpc_client.py  mcp_server.py  paracore-mcp.iss  pyproject.toml  utils.py  version-info.txt
agent/: agent_router.py  prompt.py  response_sanitizer.py  v4_repl_agent.py
mcp-build/: pyproject.toml  utils.py
mcp_core/: __init__.py  context_manager.py  prompt_assembler.py  schema_cache.py  summarizer.py  tool_helpers.py  tools.py
mcp_core/prompts/: catalog.md  common-patterns.md  critical-rules.md  globals.md  identity.md  linq-rules.md  parameter-discovery.md  redundancy.md  response-style.md  retrieval.md  script-rules.md  verification.md  workflow.md
scripts/: Set-Version.ps1
